# pgreplication

./: .gitignore  CMakeLists.txt  CMakeTestLists.txt
src/: events.cpp  events.hpp  utils.hpp
src/pgreplication/: events.cpp  events.hpp  utils.cpp  utils.hpp
src/pgreplication/pgoutput/: options.hpp  pgoutput.cpp  pgoutput.hpp
src/pgreplication/pgoutput/events/: event.hpp  message.cpp  message.hpp  origin.cpp  origin.hpp  stream.cpp  stream.hpp  stream_and_twophase.cpp  stream_and_twophase.hpp  twophase.cpp  twophase.hpp  utils.hpp
src/pgreplication/pgoutput/events/base/: begin.cpp  begin.hpp  commit.cpp  commit.hpp  delete.hpp  event.cpp  event.hpp  insert.hpp  relation.cpp  relation.hpp  relation_column.cpp  relation_column.hpp  truncate.cpp  truncate.hpp  tuple_data.hpp  type.cpp  type.hpp  update.hpp
src/pgreplication/tests/: events.cc
src/tests/: events.cc
